[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Pausebtn.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Barra de vida1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Barra de vida0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Otros/Basic theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Sprites/Boton de pausa.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Pausa.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Gameover.gd" type="Script" id=7]
[ext_resource path="res://Assets/JosefinSans-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Puntos.gd" type="Script" id=9]
[ext_resource path="res://Scripts/finalpoints.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.580392 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.486275 )

[sub_resource type="DynamicFont" id=6]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100
__meta__ = {
"_edit_horizontal_guides_": [ 87.8878, 52.0206 ],
"_edit_vertical_guides_": [ 457.994, 567.483 ]
}

[node name="OverlayGameOver" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuGameOver" type="Panel" parent="OverlayGameOver"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.8
margin_top = -150.0
margin_right = 204.8
margin_bottom = 150.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contenedor centro" type="CenterContainer" parent="OverlayGameOver/MenuGameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayGameOver/MenuGameOver/Contenedor centro"]
margin_left = 64.0
margin_top = 96.0
margin_right = 345.0
margin_bottom = 203.0

[node name="Perdiste" type="Label" parent="OverlayGameOver/MenuGameOver/Contenedor centro/VBoxContainer"]
margin_right = 281.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
text = "¡Perdiste!"

[node name="Puntos" type="Label" parent="OverlayGameOver/MenuGameOver/Contenedor centro/VBoxContainer" groups=[
"finalpoints",
]]
pause_mode = 2
margin_top = 75.0
margin_right = 281.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "Puntos: 0"
align = 1
valign = 1
script = ExtResource( 10 )

[node name="ContenedorBotones" type="CenterContainer" parent="OverlayGameOver/MenuGameOver"]
pause_mode = 2
anchor_top = 0.593333
anchor_right = 1.00098
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="OverlayGameOver/MenuGameOver/ContenedorBotones"]
pause_mode = 2
show_behind_parent = true
margin_left = 22.0
margin_top = 49.0
margin_right = 387.0
margin_bottom = 72.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reintentar" type="Button" parent="OverlayGameOver/MenuGameOver/ContenedorBotones/HBoxContainer"]
pause_mode = 2
margin_right = 140.0
margin_bottom = 23.0
text = "Reintentar"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VolverAlMenu" type="Button" parent="OverlayGameOver/MenuGameOver/ContenedorBotones/HBoxContainer"]
pause_mode = 2
margin_left = 190.0
margin_right = 365.0
margin_bottom = 23.0
text = "Volver al Menú"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contenedor" type="VBoxContainer" parent="MarginContainer"]
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida" type="TextureProgress" parent="MarginContainer/Contenedor"]
margin_right = 240.0
margin_bottom = 120.0
rect_min_size = Vector2( 240, 120 )
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 5.0
rounded = true
allow_lesser = true
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntos" type="Label" parent="MarginContainer/Contenedor" groups=[
"puntos",
]]
margin_top = 124.0
margin_right = 165.0
margin_bottom = 164.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "Puntos: 0"
script = ExtResource( 9 )

[node name="Pausa" type="TextureButton" parent="."]
pause_mode = 2
anchor_left = 0.953125
anchor_top = 0.0266667
anchor_right = 0.953125
anchor_bottom = 0.0266667
margin_right = 32.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 16, 16 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OverlayPausa" type="Panel" parent="." groups=[
"Pausa",
]]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menupausa" type="Panel" parent="OverlayPausa" groups=[
"Pausa",
]]
anchor_left = 0.353516
anchor_top = 0.0833333
anchor_right = 0.646484
anchor_bottom = 0.916667
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continuar" type="Button" parent="OverlayPausa/Menupausa" groups=[
"Pausa",
]]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.952
anchor_right = 0.5
anchor_bottom = 0.952
margin_left = -100.0
margin_top = -40.0
margin_right = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Continuar"
expand_icon = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Textopausa" type="RichTextLabel" parent="OverlayPausa/Menupausa"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.048
anchor_right = 0.5
anchor_bottom = 0.048
margin_left = -84.0
margin_right = 84.0
margin_bottom = 63.0
custom_fonts/normal_font = SubResource( 6 )
text = "Pausa"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Options" type="Panel" parent="OverlayPausa/Menupausa"]
anchor_left = 0.5
anchor_top = 0.34
anchor_right = 0.5
anchor_bottom = 0.34
margin_left = -125.0
margin_top = -75.0
margin_right = 125.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckButton" type="CheckButton" parent="OverlayPausa/Menupausa/Options"]
anchor_left = 0.128
anchor_top = 0.213333
anchor_right = 0.8868
anchor_bottom = 0.544667
margin_right = 81.3
margin_bottom = 21.3
rect_scale = Vector2( 0.7, 0.7 )
pressed = true
text = "Glow/Brillo"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OptionButton" type="OptionButton" parent="OverlayPausa/Menupausa/Options"]
anchor_left = 0.372
anchor_top = 0.606667
anchor_right = 0.624
anchor_bottom = 0.626667
margin_left = -73.5
margin_top = 5.99999
margin_right = 73.5
margin_bottom = 26.0
rect_min_size = Vector2( 147, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Dificultad Normal"
align = 1
items = [ "Dificultad Facil", null, false, 0, null, "Dificultad Normal", null, false, 1, null, "Dificultad Dificil", null, false, 2, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="OverlayGameOver/MenuGameOver/ContenedorBotones/HBoxContainer/Reintentar" to="OverlayGameOver/MenuGameOver/ContenedorBotones/HBoxContainer/Reintentar" method="_on_Reintentar_pressed"]
[connection signal="pressed" from="OverlayGameOver/MenuGameOver/ContenedorBotones/HBoxContainer/VolverAlMenu" to="OverlayGameOver/MenuGameOver/ContenedorBotones/HBoxContainer/Reintentar" method="_on_VolverAlMenu_pressed"]
[connection signal="mouse_entered" from="Pausa" to="Pausa" method="_on_Pausa_mouse_entered"]
[connection signal="mouse_exited" from="Pausa" to="Pausa" method="_on_Pausa_mouse_exited"]
[connection signal="pressed" from="Pausa" to="Pausa" method="_on_Pausa_pressed"]
